--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@hapi/h2o2",
-  "description": "Proxy handler plugin for hapi.js",
+  "name": "@mocko/h2o2",
+  "description": "Mocko's fork of @hapi/h2o2",
   "version": "9.0.2",
-  "repository": "git://github.com/hapijs/h2o2",
+  "repository": "git://github.com/gabriel-pinheiro/h2o2",
   "main": "lib/index.js",
   "engines": {
     "node": ">=12.0.0"
