--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mocko/h2o2",
   "description": "Mocko's fork of @hapi/h2o2",
-  "version": "9.0.2",
+  "version": "9.0.3",
   "repository": "git://github.com/gabriel-pinheiro/h2o2",
   "main": "lib/index.js",
   "engines": {
@@ -21,7 +21,8 @@
     "@hapi/boom": "9.x.x",
     "@hapi/hoek": "9.x.x",
     "@hapi/validate": "1.x.x",
-    "@hapi/wreck": "17.x.x"
+    "@hapi/wreck": "17.x.x",
+    "debug": "^4.3.1"
   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
